// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contract - Review Release Item Should match the snapshot on desktop 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-zc6hck-MuiGrid-root"
      data-testid="row_test0"
      id="row_test0"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 MuiGrid-grid-sm-2 MuiGrid-grid-md-2 css-1ilpy0i-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-be9dg7-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-fbogsh-MuiTypography-root"
              data-testid="sequence-number"
            >
              1
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-b465pi-MuiGrid-root"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              data-testid="product-picture"
              src="https://images.tradeservice.com/ProductImages/DIR100108/OOATEY_31911_SML.jpg"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 MuiGrid-grid-sm-8 MuiGrid-grid-md-7 css-z2rhyl-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 css-njdm5a-MuiTypography-root"
          data-testid="contract-product-brand"
        >
          Test Brand 1
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1smc91t-MuiTypography-root"
          data-testid="contract-product-name"
        >
          Test Item 1
        </div>
        <div
          class="MuiGrid-root MuiGrid-container css-peew9x-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
              data-testid="part-number"
            >
              Part# TESTPART1
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
            >
              MFR#
               
              <div
                class="MuiTypography-root MuiTypography-body1 css-1pki3pl-MuiTypography-root"
                data-testid="mfr-number"
              >
                TB1-001-TI1
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-sm-2 MuiGrid-grid-md-3 css-1jf4bwb-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-16g5rpk-MuiGrid-root"
        >
          <div
            class="number-input__container full-width"
          >
            <div
              class="number-input__button-container small"
              style="width: 1.25rem;"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-down"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="RemoveIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13H5v-2h14v2z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="number-input__input small"
              data-testid="review-contract-qty-input1"
              min="1"
              value="1"
            />
            <div
              class="number-input__button-container small"
              style="width: 1.25rem;"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-up"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AddIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-shz08v-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Contract - Review Release Item Should match the snapshot on mobile 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-u8apnj-MuiGrid-root"
      data-testid="row_test0"
      id="row_test0"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 MuiGrid-grid-sm-2 MuiGrid-grid-md-2 css-1ilpy0i-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-be9dg7-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-fbogsh-MuiTypography-root"
              data-testid="sequence-number"
            >
              1
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-b465pi-MuiGrid-root"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              data-testid="product-picture"
              src="https://images.tradeservice.com/ProductImages/DIR100108/OOATEY_31911_SML.jpg"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 MuiGrid-grid-sm-8 MuiGrid-grid-md-7 css-z2rhyl-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 css-njdm5a-MuiTypography-root"
          data-testid="contract-product-brand"
        >
          Test Brand 1
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1smc91t-MuiTypography-root"
          data-testid="contract-product-name"
        >
          Test Item 1
        </div>
        <div
          class="MuiGrid-root MuiGrid-container css-peew9x-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
              data-testid="part-number"
            >
              Part# TESTPART1
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
            >
              MFR#
               
              <div
                class="MuiTypography-root MuiTypography-body1 css-1pki3pl-MuiTypography-root"
                data-testid="mfr-number"
              >
                TB1-001-TI1
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-sm-2 MuiGrid-grid-md-3 css-1jf4bwb-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-16g5rpk-MuiGrid-root"
        >
          <div
            class="number-input__container full-width"
          >
            <div
              class="number-input__button-container small"
              style="width: 1.25rem;"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-down"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="RemoveIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13H5v-2h14v2z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="number-input__input small"
              data-testid="review-contract-qty-input1"
              min="1"
              value="1"
            />
            <div
              class="number-input__button-container small"
              style="width: 1.25rem;"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-up"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AddIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-z8885q-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Contract - Review Release Item Should match the snapshot on null thumb 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-4"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-zc6hck-MuiGrid-root"
      data-testid="row_test3"
      id="row_test3"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 MuiGrid-grid-sm-2 MuiGrid-grid-md-2 css-1ilpy0i-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-be9dg7-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-fbogsh-MuiTypography-root"
              data-testid="sequence-number"
            >
              1
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-b465pi-MuiGrid-root"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              data-testid="product-picture"
              src=""
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 MuiGrid-grid-sm-8 MuiGrid-grid-md-7 css-z2rhyl-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 css-njdm5a-MuiTypography-root"
          data-testid="contract-product-brand"
        >
          Mr. Rick J51
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1smc91t-MuiTypography-root"
          data-testid="contract-product-name"
        >
          Plumbus
        </div>
        <div
          class="MuiGrid-root MuiGrid-container css-peew9x-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
              data-testid="part-number"
            >
              Part# PLB01
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
            >
              MFR#
               
              <div
                class="MuiTypography-root MuiTypography-body1 css-1pki3pl-MuiTypography-root"
                data-testid="mfr-number"
              >
                001MRJ51PLB2017
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-sm-2 MuiGrid-grid-md-3 css-1jf4bwb-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-16g5rpk-MuiGrid-root"
        >
          <div
            class="number-input__container full-width"
          >
            <div
              class="number-input__button-container small"
              style="width: 1.25rem;"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-down"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="RemoveIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13H5v-2h14v2z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="number-input__input small"
              data-testid="review-contract-qty-input1"
              min="1"
              value="1"
            />
            <div
              class="number-input__button-container small"
              style="width: 1.25rem;"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-up"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AddIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-shz08v-MuiDivider-root"
    />
  </div>
</div>
`;
